--- a/jokowi_center/static/css/style.css
+++ b/jokowi_center/static/css/style.css
@@ -10,7 +10,10 @@
 .menu {
   background-color: red;
 }
-
+p.judul-blog{
+  width:356px;
+  word-wrap: break-word;
+}
 
 .image-footer img{
   width=75%;
@@ -21,10 +24,24 @@
 .row2{
   background-color: black;
 }
+.row-text-social-media{
+  text-align:center;
+}
 .text-footer{
   text-align: center;
   color: white;
 }
 .image-header{
   align-items: center;
+}
+.aligncenter{
+  text-align: center;
+}
+h3{
+  padding-top: 25px;
+    padding-left: 100px;
+    font-size: 23px;
+    text-align: center;
+    font-family: 'Muli', sans-serif;
+    color: #19345E;
 }
