--- a/jokowi_center/templates/base/base.html
+++ b/jokowi_center/templates/base/base.html
@@ -9,6 +9,13 @@
      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
      <!-- CSS Custom -->
      <link href="/static/css/style.css" rel="stylesheet">
+     <link href="/static/css/component.css" rel="stylesheet">
+     <link href="/static/css/demo.css" rel="stylesheet">
+     <link href="/static/css/normalize.css" rel="stylesheet">
+     <script src="/static/js/clasie.js"></script>
+     <script src="/static/js/main.js"></script>
+
+
     <title>Document</title>
 </head>
 <body>
