--- a/jokowi_center/templates/index.html
+++ b/jokowi_center/templates/index.html
@@ -1,5 +1,6 @@
 {%extends 'base/base.html'%}
 {%block content%}
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -13,13 +14,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/static/img/1.png" alt="First slide">
+      <img class="d-block w-100" src="https://cdn2.tstatic.net/medan/foto/bank/images/pernikahan-putri-presiden-jokowi-kahiyang-ayu-dan-bobby-nasution_20171109_200101.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/static/img/1.png" alt="Second slide">
+      <img class="d-block w-100" src="https://upload.wikimedia.org/wikipedia/id/thumb/1/1b/Kabinet_Kerja_Jokowi-JK_2014.jpg/800px-Kabinet_Kerja_Jokowi-JK_2014.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/static/img/1.png" alt="Third slide">
+      <img class="d-block w-100" src="https://akcdn.detik.net.id/community/media/visual/2018/09/11/3a81c604-2522-4f01-ac45-7f83b8389848_169.jpeg?w=780&q=90" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -34,6 +35,7 @@
 </div>
 <br />
 <!-- END OF CAROUSEL -->
+<h3 align="center">Berita Terbaru</h3>
 <div class="container">
   <div class="row">
     {% for item in blog|slice:":3"%}
@@ -43,6 +45,7 @@
       <br />
       <p class="judul-blog">
       {{item.judul}}
+      </p>
 
     </div>
     {% endfor %}
@@ -64,20 +67,36 @@
 
     </div>
 
+
     <div class="col-4">
       <!-- anggap ini sidebar -->
+      <div class="container">
+        <div class="row">
+        {%for item in listmasukan%}
+        <div class="row">
+          {{item.nama}}<br>
+          {{item.judul}}<br>
+          {{item.isi_pesan}}
+        </div>
+        {%endfor%}
+      </div>
+      </div>
       </div>
   </div>
   <div class="row">
+    <!-- untuk channel youtube -->
     <div class="container">
     <div class="col-12">
       <div class="row">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL5Rb3KzLrXztoCKUvx6ASvjkpaPVo5etx"
-    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL5Rb3KzLrXztoCKUvx6ASvjkpaPVo5etx"
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>
+
       </div>
-</div>
-</div>
+    </div>
+    </div>
   </div>
+  <br>
 
 </div>
 {%endblock%}
