--- a/jokowi_center/static/css/style.css
+++ b/jokowi_center/static/css/style.css
@@ -54,9 +54,9 @@ h3{
   text-align: center; */
   font-family: 'Muli', sans-serif;
   color: #19345E;
-
+}
 /* index.html */
 p.judul-blog{
-  width:356px;
+  width:300px;
   word-wrap: break-word;
 }
