--- a/jokowi_center/templates/index.html
+++ b/jokowi_center/templates/index.html
@@ -83,7 +83,7 @@
     <!-- untuk channel youtube -->
     <div class="container">
     <div class="col-12">
-      <div class="row">
+      <div class="row justify-content-center">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL5Rb3KzLrXztoCKUvx6ASvjkpaPVo5etx"
         frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <br>
