--- a/jokowi_center/templates/base/base.html
+++ b/jokowi_center/templates/base/base.html
@@ -37,7 +37,7 @@
                       <ul>
                         <a href="{% url 'jkw_center_main' %}"><li>Beranda</li></a>
                         <a href="{% url 'jkw_social_media' %}"><li>Sosial Media</li></a>
-                        <a href="{% url 'halaman_feedback' %}"><li>Kontak Kami</li></a>
+                        <a href="{% url 'Hubungikami' %}"><li>Kontak Kami</li></a>
                         <a href="http://"><li>Prestasi</li></a>
                         <a href="http://"><li>Agenda Kegiatan</li></a>
                         <a href="http://"><li>Publikasi</li></a>
